--- a/plugins/obs-outputs/data/locale/en-US.ini
+++ b/plugins/obs-outputs/data/locale/en-US.ini
@@ -1,4 +1,5 @@
 RTMPStream="RTMP Stream"
+RTMPSStream="RTMPS Stream"
 RTMPStream.DropThreshold="Drop Threshold (milliseconds)"
 FLVOutput="FLV File Output"
 FLVOutput.FilePath="File Path"
